# learning-biicode

./: README.md
akcalc/bii/: .hive.db
akcalc/blocks/Akagi201/calc/: biicode.conf  main.cpp
boost_project/bii/: .hive.db
boost_project/blocks/phil/boost_example/: CMakeLists.txt  biicode.conf  main.cpp  readme.md  server.h
gtest/bii/: .hive.db
gtest/blocks/Akagi201/akblock/: biicode.conf  main.cpp
hello-world/bii/: .hive.db
hello-world/blocks/Akagi201/akblock/: CMakeLists.txt  biicode.conf  main.cpp
reuse/bii/: .hive.db
reuse/blocks/Akagi201/math/: biicode.conf  main.cpp  operations.cpp
